--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -2,33 +2,51 @@
 <html xmlns:th="http://www.thymeleaf.org">
 
 <head>
-	<title>Acceso</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Acceso</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <style>
+        body {
+            background-color: #f8f9fa;
+        }
+        .container {
+            margin-top: 50px;
+            max-width: 500px;
+        }
+        h1 {
+            text-align: center;
+            margin-bottom: 20px;
+        }
+        .error-message {
+            color: red;
+            text-align: center;
+        }
+    </style>
 </head>
 
 <body>
+    <div class="container">
+        <h1>Bienvenido!</h1>
 
-	<div style="margin-left: 20%; width: 60%;">
-		<h1>Bienvenido !</h1>
+        <form th:action="@{/login}" th:object="${userLogin}" method="post">
+            <p th:if="${errors}" class="error-message" th:text="${errors}"></p>
+            <div class="form-group">
+                <label for="email">Correo</label>
+                <input th:field="*{email}" type="email" id="email" placeholder="Ingrese su email" class="form-control" required>
+            </div>
+            <div class="form-group">
+                <label for="password">Contraseña</label>
+                <input th:field="*{password}" type="password" id="password" placeholder="Ingrese su clave" class="form-control" required>
+            </div>
+            <button class="btn btn-primary btn-block" type="submit">Ingresar</button>
+            <button class="btn btn-secondary btn-block" type="button" onclick="window.location.href='/register'">Registrar</button>
+        </form>
+    </div>
 
-		<form th:action="@{/login}" th:object="${userLogin}" method="post">
-			<p th:if="${errors}" th:text="${errors}"></p>
-			<div class="form-group">
-				<label for="codigo">Correo</label>
-				<input th:field="*{email}" type="email" name="usuario" placeholder="Ingrese su email" class="form-control">
-			</div>
-			<br>
-			<div class="form-group">
-				<label for="codigo">Contraseña</label>
-				<input th:field="*{password}" type="password" name="clave" placeholder="Ingrese su clave" class="form-control">
-			</div>
-			<br>
-			<button class="btn btn-primary" type="submit">Ingresar</button>
-			<button class="btn btn-secondary" type="button">Registrar</button>
-		</form>
-
-	</div>
-
-
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 
 </html>
